<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SignUpActivity" android:background="@color/colorBackground">

    <TextView
            android:text="@string/sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtSignUpTitle" android:textSize="40sp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="36dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="124dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="123dp"
            app:layout_constraintHorizontal_bias="0.461" android:textColor="@color/colorTitle" android:textStyle="bold"
            android:typeface="monospace" android:fontFamily="sans-serif-condensed"/>
    <Button
            android:layout_width="321dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnNext" android:textSize="14sp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="23dp"
            app:layout_constraintTop_toBottomOf="@+id/layoutSignUpUserName" android:layout_marginTop="2dp"
            android:text="@string/next"/>
    <android.support.constraint.ConstraintLayout
            android:layout_width="368dp"
            android:layout_height="148dp" android:layout_marginTop="65dp"
            app:layout_constraintTop_toBottomOf="@+id/txtSignUpTitle" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/layoutSignUpUserName">

        <EditText
                android:layout_width="321dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/etEmail"
                android:textSize="14sp" android:hint="@string/email" android:singleLine="true"
                android:layout_marginTop="5dp"
                app:layout_constraintTop_toBottomOf="@+id/etUsername" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="24dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="23dp"
                android:inputType="textEmailAddress" android:importantForAutofill="no"/>
        <EditText
                android:layout_width="321dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/etPassword"
                android:textSize="14sp" android:hint="@string/password" android:singleLine="true"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="24dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="23dp"
                android:importantForAutofill="no"
                app:layout_constraintHorizontal_bias="1.0" android:layout_marginTop="5dp"
                app:layout_constraintTop_toBottomOf="@+id/etEmail" android:inputType="textPassword"/>
        <EditText
                android:layout_width="321dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/etUsername"
                android:textSize="14sp" android:hint="@string/username" android:singleLine="true"
                android:layout_marginTop="16dp" app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="24dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="23dp"
                android:importantForAutofill="no"/>
    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>