<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginActivity" android:background="@color/colorBackground">

    <TextView
            android:text="@string/product_stock"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:id="@+id/textLoginTitle" android:textSize="40sp"
            android:textStyle="bold" android:fontFamily="sans-serif-condensed" android:typeface="monospace"
            android:textColor="@color/colorTitle" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="97dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="116dp" android:layout_marginTop="36dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.333"/>
    <android.support.constraint.ConstraintLayout
            android:layout_width="368dp"
            android:layout_height="234dp" android:layout_marginTop="92dp"
            app:layout_constraintTop_toBottomOf="@+id/textLoginTitle" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0" android:id="@+id/constraintLayout">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView2" android:text="@string/login_sign_up"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="142dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="141dp"
                android:textColor="@color/colorTitle"/>
        <TextView
                android:layout_width="84dp"
                android:layout_height="7dp"
                android:id="@+id/textView6"
                android:background="@drawable/straight_line"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="58dp"
                android:layout_marginBottom="22dp" app:layout_constraintBottom_toTopOf="@+id/etLoginEmail"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="24dp"
                app:layout_constraintEnd_toStartOf="@+id/textView2"/>
        <TextView
                android:layout_width="84dp"
                android:layout_height="7dp"
                android:id="@+id/textView7"
                android:background="@drawable/straight_line"
                app:layout_constraintStart_toEndOf="@+id/textView2" app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="24dp" android:layout_marginBottom="22dp"
                app:layout_constraintBottom_toTopOf="@+id/etLoginEmail" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="57dp"/>
        <EditText
                android:layout_width="323dp"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/etLoginEmail" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent" android:hint="@string/email" android:textSize="14sp"
                android:layout_marginTop="18dp" app:layout_constraintTop_toBottomOf="@+id/textView2"
                android:importantForAutofill="no" android:singleLine="true"/>
        <EditText
                android:layout_width="323dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/etLoginPassword" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent" android:hint="@string/password"
                app:layout_constraintHorizontal_bias="0.517" android:textSize="14sp" android:layout_marginTop="5dp"
                app:layout_constraintTop_toBottomOf="@+id/etLoginEmail" android:importantForAutofill="no"
                android:singleLine="true" android:inputType="textPassword"/>
        <Button
                android:text="@string/login"
                android:layout_width="327dp"
                android:layout_height="wrap_content"
                android:id="@+id/btnLogin" android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@+id/etLoginPassword" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"/>
        <android.support.constraint.ConstraintLayout
                android:layout_width="325dp"
                android:layout_height="23dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnLogin" android:id="@+id/constraintLayout2">

            <TextView
                    android:text="@string/don_t_have_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView4" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="76dp" app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="11dp" app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginBottom="13dp" app:layout_constraintVertical_bias="0.45"
                    android:textSize="12sp" android:textColor="@color/colorTitle"/>
            <TextView
                    android:text="@string/sign_up"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtGoToSignUp"
                    app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="11dp"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="76dp"
                    app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="13dp"
                    app:layout_constraintStart_toEndOf="@+id/textView4" android:layout_marginStart="8dp"
                    app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="0.45"
                    android:textColor="@color/colorLoginTitle" android:textSize="12sp"/>
        </android.support.constraint.ConstraintLayout>
    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>