<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ChatRoomActivity">

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@color/colorBackground" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/constraintLayout3">

        <TextView
                android:text="@string/jay_dev"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txtSenderName" android:textStyle="bold" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="166dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="172dp" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent" android:textSize="18sp"
                android:textColor="@color/colorTitle"/>
    </android.support.constraint.ConstraintLayout>
    <android.support.v7.widget.RecyclerView
            android:layout_height="472dp"
            android:layout_width="match_parent"
            android:padding="5dp"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout3" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:id="@+id/recyclerView"
            android:layout_marginBottom="3dp" app:layout_constraintBottom_toTopOf="@+id/constraintLayout4"/>
    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:foregroundGravity="center_horizontal"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/constraintLayout4"
            android:background="@color/colorWriteMessageBox">

        <EditText
                android:layout_width="316dp"
                android:layout_height="37dp"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/editText"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:textSize="14sp" android:hint="@string/write_message"
                app:layout_constraintTop_toTopOf="parent"
                android:importantForAutofill="no"
                android:background="@drawable/write_message_box" android:layout_marginBottom="2dp"
                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="2dp"
                app:layout_constraintEnd_toStartOf="@+id/imageButton2" android:layout_marginEnd="5dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="5dp"/>
        <ImageButton
                android:layout_width="46dp"
                android:layout_height="45dp" app:srcCompat="@drawable/button_state"
                android:id="@+id/imageButton2"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:scaleType="centerCrop" app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" android:contentDescription="@string/todo"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="5dp"/>
    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>